<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        style="@style/image_logo"
        android:src="@drawable/logo_size"
        android:contentDescription="@string/logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/tv_signin"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:alpha="0"/>

    <TextView
        android:layout_marginTop="0dp"
        android:id="@+id/tv_email"
        style="@style/attribute_page_login"
        app:layout_constraintTop_toBottomOf="@id/tv_signin"
        android:text="@string/email"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.frhnfath.storyapp.customviews.EmailEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:hint="@string/insert_email"
        android:alpha="0"/>

    <TextView
        style="@style/attribute_page_login"
        android:id="@+id/tv_password"
        android:text="@string/password"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="parent" />

    <com.frhnfath.storyapp.customviews.PasswordEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        android:inputType="textPassword" />

    <com.frhnfath.storyapp.customviews.CustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        android:layout_marginTop="10dp"
        android:alpha="0"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        android:alpha="0"
        android:text="@string/ask_account" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_marginTop="10dp"
        app:circularflow_radiusInDP="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:alpha="0"
        android:text="@string/register" />

</androidx.constraintlayout.widget.ConstraintLayout>